--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -60,8 +60,11 @@
         <aside class="bg-light lter">
          <section id="users" class="vbox scrollable padder-b">
            <header class="bg-light dker header clearfix padder-t b-b">
+             <div id="addUserButton">
+              <a href="{{path('lily_userAdd') }}" class="btn btn-primary">Ajouter un compte</a>
+             </div>
              <ul class="breadcrumb m-n">
-               Vos comptes :
+               Comptes :
              </ul>
            </header>
            <section class="bg-light lter">
@@ -77,66 +80,16 @@
                     <!-- user list -->
                     <ul id="user-list" class="list-group list-group-sp"></ul>
                     <a class="btn btn-sm btn-white new-user pull-right-lg m-l-sm"><i class="icon-plus pull-left"></i>Ajouter un utilisateur</a>
-                  <!--
-                    <ul id="user-List">
-                      <thead>
-                        <tr>
-                          <th>Identifiant</th>
-                          <th>Nom</th>
-                          <th>Prénom</th>
-                          {% for roleLabel, role in rolesShowed %}
-                            <th>{{ roleLabel }}</th>
-                          {% endfor %}
-                          <th></th>
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                      {% for userListed in userList %}
-                        <tr>
-                          <td>{{ userListed.username }}</td>
-                          <td>{{ userListed.lastname }}</td>
-                          <td>{{ userListed.firstname }}</td>
-                          {% for roleLabel, role in rolesShowed %}
-                            <td><div class="{{ (role in userListed.getAllRoles()) ? 'icon-ok yesIcon' : 'icon-remove noIcon' }}"></div></td>
-                          {% endfor %}
-                          <td>
-                            <form {{ form_enctype(modifForms[loop.index0]) }}>
-                              {{ form_widget(modifForms[loop.index0]) }}
-                              <input type="submit" class="btn btn-primary" value="Modifier"/>
-                            </form>
-                          </td>
-                          <td>
-                            <form {{ form_enctype(delForms[loop.index0]) }}>
-                              {{ form_widget(delForms[loop.index0]) }}
-                              <input type="submit" class="btn btn-primary" value="Supprimer"/>
-                            </form>
-                          </td>
-                        </tr>
-                      {% else %}
-                        <tr>
-                          <td colspan="7">Pas d'utilisateur trouvé</td>
-                        </tr>
-                      {% endfor %}
-                      </tbody>
-                    </table>
-                  -->
-                  <div class="wrapper">
-                    Vous avez actuellement {{ userList|length }} compte{{ userList|length < 2 ? '' : 's' }} sur les {{ maxusers }} disponible{{ maxusers<2 ? '' : 's' }}.<br />
-                    <br />
-                    {% if userList|length < maxusers %}
-                    <a href="{{path('lily_userAdd') }}" class="btn btn-primary">Ajouter un compte</a><br />
-                    {% else %}
-                    Vous ne pouvez plus ajouter d'utilisateur<br />
-                    {% endif %}
-                  </div>
+                    <div class="wrapper">
+                      Vous avez actuellement <span id="userListNumberOfUser"></span> compte(s) sur les {{ maxusers }} disponible(s).<br />
+                    </div>
+                  </section>
                 </section>
-              </section>
-            </aside>
-            <!-- /.aside -->
-            <aside id="user-detail" class="aside-userManagement bg-light lter b-l hide"></aside>
-            <!-- Affichage du panneau de modification-->
-          </section>
+              </aside>
+              <!-- /.aside -->
+              <aside id="user-detail" class="aside-userManagement bg-light lter b-l hide"></aside>
+              <!-- Affichage du panneau de modification-->
+            </section>
         </section>
       </section>
     </aside>
