Gestion modification d'utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -61,7 +61,7 @@
          <section id="users" class="vbox scrollable padder-b">
            <header class="bg-light dker header clearfix padder-t b-b">
              <div id="addUserButton">
-              <a href="{{path('lily_userAdd') }}" class="btn btn-primary">Ajouter un compte</a>
+              <a href="" class="btn btn-primary">Ajouter un compte</a>
              </div>
              <ul class="breadcrumb m-n">
                Comptes :
@@ -81,7 +81,7 @@
                     <ul id="user-list" class="list-group list-group-sp"></ul>
                     <a class="btn btn-sm btn-white new-user pull-right-lg m-l-sm"><i class="icon-plus pull-left"></i>Ajouter un utilisateur</a>
                     <div class="wrapper">
-                      Vous avez actuellement <span id="userListNumberOfUser"></span> compte(s) sur les {{ maxusers }} disponible(s).<br />
+                      Vous avez actuellement <span id="userListNumberOfUser"></span> sur les <span id="userListNumberOfUser"></span> disponible(s).<br />
                     </div>
                   </section>
                 </section>
