--- a/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/user_edit.html.twig
@@ -8,25 +8,27 @@
 						{{ form_errors(form) }}
 						 {% for field in form %}
 						 	{% if field.vars.name!='_token' %}
-								{{ form_label(field) }}
-	    						{{ form_errors(field) }}
-	    						{% set type = field.vars.block_prefixes[1] %}
-	    						{% if type in ['text', 'password', 'email'] %}
-									<input type="{{ type }}" name="{{ field.vars.name }}" id="{{ field.vars.id }}" class="form-control input-sm"
-										value="<% if(typeof({{ field.vars.name }})!=='undefined') {{ '{' }} %><%-{{ field.vars.name }} %><% {{ '}' }} %>" />
-								{% else %}
-									 <div class="btn-group m-r">
-			                          <button data-toggle="dropdown" class="btn btn-sm btn-white dropdown-toggle">
-			                            <span class="dropdown-label" data-placeholder="Please select">Please select</span> 
-			                            <span class="caret"></span>
-			                          </button>
-			                          <ul class="dropdown-menu dropdown-select">
-			                          	{% for choice in field.vars.choices %}
-											<li><a href="#"><input type="checkbox" name="{{ choice.value }}" checked>{{ choice.label }}</a></li>
-			                            {% endfor %}
-			                          </ul>
-			                        </div>
-								{% endif %}
+						 		<div class="userListInput">
+									{{ form_label(field) }}
+		    						{{ form_errors(field) }}
+		    						{% set type = field.vars.block_prefixes[1] %}
+		    						{% if type in ['text', 'password', 'email'] %}
+										<input type="{{ type }}" name="{{ field.vars.name }}" id="{{ field.vars.id }}" class="form-control input-sm"
+											value="<% if(typeof({{ field.vars.name }})!=='undefined') {{ '{' }} %><%-{{ field.vars.name }} %><% {{ '}' }} %>" />
+									{% else %}
+										 <div class="btn-group m-r">
+				                          <button data-toggle="dropdown" class="btn btn-sm btn-white dropdown-toggle">
+				                            <span class="dropdown-label" data-placeholder="Please select">Please select</span> 
+				                            <span class="caret"></span>
+				                          </button>
+				                          <ul class="dropdown-menu dropdown-select">
+				                          	{% for choice in field.vars.choices %}
+												<li><a href="#"><input type="checkbox" name="{{ choice.value }}" checked>{{ choice.label }}</a></li>
+				                            {% endfor %}
+				                          </ul>
+				                        </div>
+									{% endif %}
+								</div>
 							{% endif %}
 						{% endfor %}
 					</form>
