Modification apparence formulaire utilisateur

--- a/src/Lily/UserBundle/Resources/public/css/userManager.css
+++ b/src/Lily/UserBundle/Resources/public/css/userManager.css
@@ -21,6 +21,7 @@
 
 .userListInput {
     display: inline-block;
-    padding-right: 10px;
-    width: 50%;
+    padding: 10px;
+    width: 49%;
 }
+
