Modification apparence formulaire utilisateur

--- a/src/Lily/UserBundle/Resources/public/css/userManager.css
+++ b/src/Lily/UserBundle/Resources/public/css/userManager.css
@@ -25,3 +25,13 @@
     width: 49%;
 }
 
+#user-editor .btn-group {
+    display: block;
+}
+#user-editor .btn-group button {
+    text-align: left;
+    width: 100%;
+}
+#user-editor .caret {
+    float: right;
+}
