Modification apparence formulaire utilisateur

--- a/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Manage/index.html.twig
@@ -21,7 +21,7 @@
     <section id="userManagement">
       <section class="hbox stretch">
       <!-- .aside -->
-        <aside class="aside aside-md bg-dark">
+      {#}  <aside class="aside aside-md bg-dark">
           <section class="vbox">
             <header class="dk header">
               <button class="btn btn-icon btn-default btn-sm pull-right visible-xs m-r-xs" data-toggle="class:show" data-target="#userManagement-nav"><i class="icon-reorder"></i></button>
@@ -57,6 +57,7 @@
           </section>
         </aside>
         <!-- /.aside -->
+        {#}
         <aside class="bg-light lter">
          <section id="users" class="vbox scrollable padder-b">
            <header class="bg-light dker header clearfix padder-t b-b">
