--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -32,8 +32,9 @@
 		          <li class="active"><a href="#" data="unavailable"><input type="radio" name="d-s-r">Hors ligne</a></li>
 		        </ul>
 		      </div>
-		      <a href="#"><i class="icon-bar-chart"></i></a>
-			  <a href="#"><i class="icon-gear"></i></a>    
+		      <a href="#"><i class="icon-gear"></i></a> 
+		      <a href="#"><i class="icon-bar-chart active"></i></a>
+			  <a href="#"><b class="badge bg-warning pull-right">3</b><i class="icon-comments-alt"></i></a>   
 		    </div>
 		  </header>
 		<section id="chat-section">
