--- a/src/Lily/HomePageBundle/Resources/views/Fr/index.html.twig
+++ b/src/Lily/HomePageBundle/Resources/views/Fr/index.html.twig
@@ -9,8 +9,8 @@
 
 	<div class="wrapper">
 		<div>
-			<h1>Améliorez votre relation client digitale grâce à l’alliance du meilleur des ressources humaines et virtuelles</h1>
-			<p>SAIO édite des logiciels de Q-management aidant les entreprises à améliorer l'accueil et l'accompagnement de leurs clients et prospects sur le web et en magasins.</p>
+			<h1>Améliorez l’accueil et l’accompagnement<br>de vos clients et prospects sur le web<br>et en magasin</h1>
+			<p>SAIO édite des solutions innovantes de Q-management vous permettant d’améliorer votre satisfaction client et la productivité de vos ressources humaines tout en réduisant vos coûts de support.</p>
 			<!--<a href="#video" class="button no-ie"><img src="images/home/icon-play.svg" class="play" alt="play">Lire la vidéo</a>
 		<!--[if lt IE 9]>
     <a href="#video" class="button" style="display: none;"><img src="images/home/icon-play.png" class="play" alt="play">Lire la vidéo</a>
@@ -30,24 +30,24 @@
 		<h1 style="display: none;">Arguments clés</h1>
 		<div class="content">
 			<div>
-				<img src="{{ asset('images/home/icon-thumb.png') }}" alt="Améliorer">
-				<p>Améliorez<br>l'expérience client</p>	
+				<img src="{{ asset('images/home/icon-piggy.png') }}" alt="Améliorer">
+				<p>Réduisez vos coûts<br>de support de 25%</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-piggy.png') }}" alt="Réduire">
-				<p>Réduisez vos coûts<br>de support</p>	
+				<p>Optimisez vos ressources<br>internes de 30%</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-optimize.png') }}" alt="Optimiser">
-				<p>Optimisez vos<br>ressources internes</p>	
+				<p>Augmentez vos<br>ventes de 15%</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-performance.png') }}" alt="Réponse">
-				<p>Mesurez <br>vos performances</p>
+				<p>Accompagnez vos<br>client 24/7</p>
 			</div>
 			<div>
-				<img src="{{ asset('images/home/icon-listen.png') }}" alt="Ecouter">
-				<p>écoutez<br>la voix client</p>	
+				<img src="{{ asset('images/home/icon-performance.png') }}" alt="Ecouter">
+				<p>Mesurez<br>vos performances</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-human.png') }}" alt="Humaniser">
@@ -69,7 +69,7 @@
 	<div class="wrapper">
 		<div class="content">
 			<h1>Découvrez notre solution</h1>
-			<p>Nous proposons une solution logicielle innovante vous permettant de communiquer en mode one to one avec vos clients et prospects via une boîte de dialogue disponible sur tous vos médias web.<br><br>Ce dialogue est automatisé lorsque le cas est simple et fréquent grâce à l’agent virtuel. Quand le cas est complexe l’agent virtuel redirige son interlocuteur vers votre équipe de support qui prend le relais.<br><br>L’interlocuteur reste libre dans le choix du canal de communication et peut escalader via chat, mail, téléphone ou encore web call-back.</p>
+			<p>Nous proposons une plateforme digitale qui connecte vos clients et votre équipe de support via une boîte de dialogue disponible sur tous vos médias : site internet, application mobile, page Facebook et borne physique en magasin. Un agent virtuel sert d’intermédiaire. C’est un guide pour les utilisateurs et un filtre pourvotre entreprise.<br><br>Grâce à un moteur de reconnaissance sémantique, l’agent virtuel permet de capter les requêtes simples et redondantes et ainsi d’automatiser le dialogue dans la mesure du possible.<br>Quand le cas est complexe, il redirige l’utilisateur vers le bon interlocuteur de votre équipe de support.<br><br>L’utilisateur reste libre dans le choix du canal de communication et peut escalader via live chat, mail, téléphone ou encore prendre directement rendez-vous.</p>
 		</div>
 		<a href="#anchor-fonction"><img src="{{ asset('images/home/arrow-down.jpg') }}" alt="arrow-down"></a>
 	</div>
@@ -125,25 +125,25 @@
 
 	<a id="anchor-reasons"></a>
 	<div class="wrapper">
-		<h1>Quelques raisons de nous choisir</h1>
+		<h1>Ce qui nous différencie...</h1>
 		<div class="content">
 			<div>
 				<img src="{{ asset('images/home/icon-people.png') }}" alt="Attractivité et interactivité">
-				<h2>Utilisateurs</h2>
-				<p>Amélioration de l'expérience</p><p>Accessibilité optimale</p><p class="last">Adaptation aux nouveaux usages</p>	
+				<h2>Une solution complète</h2>
+				<p>Notre solution est «tout-en-un» et vous permet d’adopter une stratégie multi-canal et cross-canal en toute simplicité.</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-factory.png') }}" alt="Réduction des coûts">
-				<h2>Entreprises</h2>
-				<p>Réduction de vos coûts de support</p><p>Amélioration de votre productivité</p><p class="last">Mesure de vos performances</p>	
+				<h2>Une solution multi-support</h2>
+				<p>Notre solution est disponible sur n’importe quel type de plateforme. Le seul prérequis est une connexion internet.</p>	
 			</div>
 			<div>
 				<img src="{{ asset('images/home/icon-gears.png') }}" alt="admin">
-				<h2>Spécificités</h2>
-				<p>Solution modulaire et interopérable</p><p>Solution simple d'administration</p><p class="last">Pas d'installation logicielle lourde</p>
+				<h2>Un outil de statistiques</h2>
+				<p>Vous accédez à des statistiques qui vous permettent de capter les attentes de vos clients et de contrôler l’efficacité de votre service.</p>
 			</div>
 		</div>
-		<!--<a href="{{ path('home_contact') }}" class="button">Contactez-nous</a>-->
+		<p>Mais notre solution c’est également une solution simple d’installation, 100% clé en main, modulaire, interopérable, entièrement personnalisable... Pour plus d’informations, n’hésitez pas à nous contacter.</p>
 	</div>
 
 </section>
