--- a/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/Operator/index.html.twig
@@ -28,8 +28,8 @@
 		          <i class="icon-stop"></i><span class="dropdown-label"></span>		        
 		        </button>
 		        <ul class="dropdown-menu dropdown-select">
-		          <li><a href="#" data="available"><input type="radio" name="d-s-r">En ligne</a></li>
-		          <li class="active"><a href="#" data="unavailable"><input type="radio" name="d-s-r">Hors ligne</a></li>
+		          <li><a href="#" data="available"><input type="radio" name="d-s-r">Disponible</a></li>
+		          <li class="active"><a href="#" data="unavailable"><input type="radio" name="d-s-r">Indisponible</a></li>
 		        </ul>
 		      </div>
 		      <a href="#"><i class="icon-gear"></i></a> 
