--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -28,10 +28,10 @@
   {% block templates %} 		
 	<!-- L'appel des différents scripts de vue -->
 	<script type="text/template" id="parameters">
-        {% include 'LilyBackOfficeBundle:Administration:parameters.html.twig' %}
+        {% include 'LilyBackOfficeBundle:Config:parameters.html.twig' %}
     </script>
 	<script type="text/template" id="modal">
-        {% include 'LilyBackOfficeBundle:Administration:modal.html.twig' %}
+        {% include 'LilyBackOfficeBundle:Config:modal.html.twig' %}
     </script>		 
   {% endblock %}
 
