--- a/web/css/fbea547.css
+++ b/web/css/fbea547.css
@@ -1,47 +1,1 @@
-body {
-    overflow: hidden;
-    background-color:transparent !important;
-}
-
-#avatarContainer {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    cursor: pointer;
-    height: 119px;
-    line-height: 119px;
-    padding: 0;
-    text-align: center;
-    max-width: 119px;
-}
-
-#avatarContainer #changeAvatar {
-    line-height: 100%;
-    margin: auto;
-    vertical-align: middle;
-    width: 82px;
-    display:none;
-    top: -120px;
-    position: relative;
-    z-index: 50;
-}
-
-#avatarContainer:hover #changeAvatar {
-    display: inline-block;
-}
-
-#avatarContainer .changeAvatarInput {
-    cursor: pointer;
-    margin: 0;
-    opacity: 0;
-    position: relative;
-    width: 100%;
-    z-index: 100;
-}
-
-#errorMessage {
-    line-height: normal;
-    max-width: 119px;
-    position: absolute;
-    top: 40px;
-}
+body{overflow:hidden;background-color:transparent!important}#avatarContainer{background-position:center center;background-repeat:no-repeat;background-size:contain;cursor:pointer;height:119px;line-height:119px;padding:0;text-align:center;max-width:119px}#avatarContainer #changeAvatar{line-height:100%;margin:auto;vertical-align:middle;width:82px;display:none;top:-120px;position:relative;z-index:50}#avatarContainer:hover #changeAvatar{display:inline-block}#avatarContainer .changeAvatarInput{cursor:pointer;margin:0;opacity:0;position:relative;width:100%;z-index:100}#errorMessage{line-height:normal;max-width:119px;position:absolute;top:40px}
