--- a/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/menu.html.twig
@@ -96,7 +96,7 @@
               </li> 
               {% if is_granted('ROLE_ADMIN') %}
               <li>
-                <a href="{{ path('lily_administration') }}" class="{% if app.request.attributes.get('_route') == 'lily_administration' %}active{% endif %}">
+                <a href="{{ path('lily_config') }}" class="{% if app.request.attributes.get('_route') == 'lily_administration' %}active{% endif %}">
                   <i class="icon-gear"></i>
                   <span>Paramètres</span>
                 </a>
