--- a/web/css/459acf4.css
+++ b/web/css/459acf4.css
@@ -1,334 +1,2 @@
-ul.wysihtml5-toolbar {
-	margin: 0;
-	padding: 0;
-	display: block;
-}
-
-ul.wysihtml5-toolbar::after {
-	clear: both;
-	display: table;
-	content: "";
-}
-
-ul.wysihtml5-toolbar > li {
-	float: left;
-	display: list-item;
-	list-style: none;
-	margin: 0 5px 10px 0;
-}
-
-ul.wysihtml5-toolbar a[data-wysihtml5-command=bold] {
-	font-weight: bold;
-}
-
-ul.wysihtml5-toolbar a[data-wysihtml5-command=italic] {
-	font-style: italic;
-}
-
-ul.wysihtml5-toolbar a[data-wysihtml5-command=underline] {
-	text-decoration: underline;
-}
-
-ul.wysihtml5-toolbar a.btn.wysihtml5-command-active {
-	background-image: none;
-	outline: 0;
-}
-
-ul.wysihtml5-commands-disabled .dropdown-menu {
-	display: none !important;
-}
-
-ul.wysihtml5-toolbar div.wysihtml5-colors {
-  display:block;
-  width: 50px;
-  height: 20px;
-  margin-top: 2px;
-  margin-left: 5px;
-  position: absolute;
-  pointer-events: none;
-}
-
-ul.wysihtml5-toolbar a.wysihtml5-colors-title {
-  padding-left: 70px;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="black"] {
-  background: black !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="silver"] {
-  background: silver !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="gray"] {
-  background: gray !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="maroon"] {
-  background: maroon !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="red"] {
-  background: red !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="purple"] {
-  background: purple !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="green"] {
-  background: green !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="olive"] {
-  background: olive !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="navy"] {
-  background: navy !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="blue"] {
-  background: blue !important;
-}
-
-ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
-  background: orange !important;
-}
-.userList-item .user-info {
-    display: inline-block;
-    font-size: 10px;
-    line-height: 23px;
-    padding-left: 20px;
-    vertical-align: top;
-}
-
-#user-list .close {
-    font-size:30px;
-}
-
-#user-list .view {
-    cursor: pointer;
-}
-
-#user-list .active {
-    background: none repeat scroll 0 0 #58cef6;
-    color: white !important;
-}
-
-#addUserButton {
-	float:right;
-    display:none;
-}
-
-.userListInput {
-    display: inline-block;
-    margin-bottom: 8px;
-    padding: 5px;
-    width: 49%;
-}
-
-.userListInput label {
-    font-weight: lighter;
-}
-
-#user-editor .btn-group {
-    display: block;
-}
-#user-editor .btn-group button {
-    text-align: left;
-    width: 100%;
-}
-
-#user-editor .caret {
-    float: right;
-    margin-top: 6px;
-}
-
-.dropdown-label {
-    display: block;
-    margin-right: 9px;
-    overflow: hidden;
-}
-
-#user-editor .avatarInput {
-    float:left;
-    margin-bottom: 0;
-}
-
-#userMaxReachedAlert {
-    background-color: #ffa163;
-    border-radius: 2px;
-    color: white;
-    margin: 0 15px;
-    padding: 10px 20px;
-    display:none;
-}
-
-#userListCounter {
-    margin-left: 20px;
-    margin-right: 35px;
-    padding: 10px;
-}
-
-#sortMenu {
-    margin: 0;
-}
-
-#sortMenu .btn-white{
-    background: transparent;
-}
-
-#sortMenu .btn-white:focus{
-    background-color:transparent;
-}
-
-#sortMenu .dropdown-menu > li {
-    padding: 5px 15px;
-    cursor: pointer;
-}
-
-#sortMenu .dropdown-menu > li:hover, .dropdown-menu > li:focus, .dropdown-menu > .active, .dropdown-menu > .active:hover, .dropdown-menu > .active:focus {
-    background-color: #4c5566;
-    background-image: none;
-    color: #fff;
-    filter: none;
-}
-
-
-
-@media (min-width: 768px) {
-    #user-detail {
-        width: 33%;
-    }
-}
-
-@media (min-width: 530px) {
-    #userListCounter {
-        float: right;
-    }
-
-    #userListCounter.limitReached {
-        color: white;
-    }
-}
-
-@media (max-width: 530px) {
-    #userListCounter {
-        text-align: right;
-    }
-}
-
-
-#user-editor iframe#avatarWidget {
-    border:none;
-    width: 100%;
-    max-width: 119px;
-    height: 119px;
-    margin-top: 4px;
-}
-
-/* Boites de dialogue Bootbox  */
-.bootbox .btn-delete:hover {
-    background-color: #EB4848;
-}
-.bootbox .btn-delete {
-    background-color: #ee5a5a;
-    border-color: #A93535;
-    color: white;
-}
-
-.bootbox .btn-cancel:hover {
-    background-color: #FAFAFA;
-}
-.bootbox .btn-cancel {
-    background-color: white;
-    border-color: #ccc;
-}
-
-.bootbox .modal-footer {
-    text-align: center;
-}
-.bootbox .modal-footer .btn {
-    display: block;
-    margin: 0 auto 6px;
-    width: 90%;
-}
-.bootbox .modal-dialog {
-    width: 450px;
-}
-
-.bootbox .bootbox-body {
-    font-size: 15px;
-}
-
-#user-editor .form-errors {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: #fb6b5b;
-}
-
-/* ====================================================
-               Statistiques utilisateurs
-  ================================================== */
-#stats-user {
-    background: none repeat scroll 0 0 white;
-    border: thin solid #eee;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    width: 100%;
-}
-#stats-user .stat-user {
-    border-top: thin solid #eee;
-    display: inline-table;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    text-align: center;
-    width: 32%;
-}
-#stats-user .stat-user.firstLine {
-    border-top: medium none;
-}
-#stats-user .stat-value.lastOfLine {
-    border-right: medium none;
-}
-#stats-user .stat-value {
-    border-right: thin solid #ddd;
-    font-size: 24px;
-    font-weight: bold;
-    padding-bottom: 14px;
-}
-
-#graph-stats {
-    background-color: white;
-    border-color: #eee;
-    border-style: solid solid none;
-    border-width: thin thin medium;
-}
-.stat-legend {
-    margin-top: -15px;
-}
-
-#userManagementContent header.bg-light {
-    background: unset;
-}
-
-#userManagementContent ul.nav-tabs {
-    border-bottom: unset;
-}
-
-#userOverview > img {
-    float: left;
-    margin-right: 10px;
-}
-
-#userOverview {
-    background-color: white;
-    height: 100px;
-    padding: 10px;
-    font-size: 13px;
-    line-height: 25px;
-}
-
+ul.wysihtml5-toolbar{margin:0;padding:0;display:block}ul.wysihtml5-toolbar::after{clear:both;display:table;content:""}ul.wysihtml5-toolbar>li{float:left;display:list-item;list-style:none;margin:0 5px 10px 0}ul.wysihtml5-toolbar a[data-wysihtml5-command=bold]{font-weight:bold}ul.wysihtml5-toolbar a[data-wysihtml5-command=italic]{font-style:italic}ul.wysihtml5-toolbar a[data-wysihtml5-command=underline]{text-decoration:underline}ul.wysihtml5-toolbar a.btn.wysihtml5-command-active{background-image:none;outline:0}ul.wysihtml5-commands-disabled .dropdown-menu{display:none!important}ul.wysihtml5-toolbar div.wysihtml5-colors{display:block;width:50px;height:20px;margin-top:2px;margin-left:5px;position:absolute;pointer-events:none}ul.wysihtml5-toolbar a.wysihtml5-colors-title{padding-left:70px}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="black"]{background:black!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="silver"]{background:silver!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="gray"]{background:gray!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="maroon"]{background:maroon!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="red"]{background:red!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="purple"]{background:purple!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="green"]{background:green!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="olive"]{background:olive!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="navy"]{background:navy!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="blue"]{background:blue!important}ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"]{background:orange!important}
+.userList-item .user-info{display:inline-block;font-size:10px;line-height:23px;padding-left:20px;vertical-align:top}#user-list .close{font-size:30px}#user-list .view{cursor:pointer}#user-list .active{background:none repeat scroll 0 0 #58cef6;color:white!important}#addUserButton{float:right;display:none}.userListInput{display:inline-block;margin-bottom:8px;padding:5px;width:49%}.userListInput label{font-weight:lighter}#user-editor .btn-group{display:block}#user-editor .btn-group button{text-align:left;width:100%}#user-editor .caret{float:right;margin-top:6px}.dropdown-label{display:block;margin-right:9px;overflow:hidden}#user-editor .avatarInput{float:left;margin-bottom:0}#userMaxReachedAlert{background-color:#ffa163;border-radius:2px;color:white;margin:0 15px;padding:10px 20px;display:none}#userListCounter{margin-left:20px;margin-right:35px;padding:10px}#sortMenu{margin:0}#sortMenu .btn-white{background:transparent}#sortMenu .btn-white:focus{background-color:transparent}#sortMenu .dropdown-menu>li{padding:5px 15px;cursor:pointer}#sortMenu .dropdown-menu>li:hover,.dropdown-menu>li:focus,.dropdown-menu>.active,.dropdown-menu>.active:hover,.dropdown-menu>.active:focus{background-color:#4c5566;background-image:none;color:#fff;filter:none}@media(min-width:768px){#user-detail{width:33%}}@media(min-width:530px){#userListCounter{float:right}#userListCounter.limitReached{color:white}}@media(max-width:530px){#userListCounter{text-align:right}}#user-editor iframe#avatarWidget{border:0;width:100%;max-width:119px;height:119px;margin-top:4px}.bootbox .btn-delete:hover{background-color:#eb4848}.bootbox .btn-delete{background-color:#ee5a5a;border-color:#a93535;color:white}.bootbox .btn-cancel:hover{background-color:#fafafa}.bootbox .btn-cancel{background-color:white;border-color:#ccc}.bootbox .modal-footer{text-align:center}.bootbox .modal-footer .btn{display:block;margin:0 auto 6px;width:90%}.bootbox .modal-dialog{width:450px}.bootbox .bootbox-body{font-size:15px}#user-editor .form-errors{list-style:none;margin:0;padding:0;color:#fb6b5b}#stats-user{background:none repeat scroll 0 0 white;border:thin solid #eee;margin:0;padding:0;text-align:center;width:100%}#stats-user .stat-user{border-top:thin solid #eee;display:inline-table;padding-bottom:15px;padding-top:15px;text-align:center;width:32%}#stats-user .stat-user.firstLine{border-top:medium none}#stats-user .stat-value.lastOfLine{border-right:medium none}#stats-user .stat-value{border-right:thin solid #ddd;font-size:24px;font-weight:bold;padding-bottom:14px}#graph-stats{background-color:white;border-color:#eee;border-style:solid solid none;border-width:thin thin medium}.stat-legend{margin-top:-15px}#userManagementContent header.bg-light{background:unset}#userManagementContent ul.nav-tabs{border-bottom:unset}#userOverview>img{float:left;margin-right:10px}#userOverview{background-color:white;height:100px;padding:10px;font-size:13px;line-height:25px}
